--- a/css/main.css
+++ b/css/main.css
@@ -2,29 +2,31 @@
     box-sizing: border-box;
 }
 
+.topnav{
+  display: block;
+   color: white;
+}
+
 body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-/* Style the header */
 header {
     background-color: #666;
-    padding: 30px;
+
     text-align: center;
     font-size: 35px;
     color: white;
 }
 
-/* Create two columns/boxes that floats next to each other */
 nav {
     float: left;
     width: 30%;
-    height: 300px; /* only for demonstration, should be removed */
+    height: 300px;
     background: #ccc;
     padding: 20px;
 }
 
-/* Style the list inside the menu */
 nav ul {
     list-style-type: none;
     padding: 0;
@@ -32,20 +34,17 @@ nav ul {
 
 article {
     float: left;
-    padding: 20px;
-    width: 500px;
+    width: 400px;
     background-color: #f1f1f1;
-    height: 600px; /* only for demonstration, should be removed */
+    height: 300px;
 }
 
-/* Clear floats after the columns */
 section:after {
     content: "";
     display: table;
     clear: both;
 }
 
-/* Style the footer */
 footer {
     background-color: #777;
     padding: 10px;
@@ -53,7 +52,6 @@ footer {
     color: white;
 }
 
-/* Responsive layout - makes the two columns/boxes stack on top of each other instead of next to each other, on small screens */
 @media (max-width: 600px) {
     nav, article {
         width: 100%;
